2009-11-13  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightBuildExtension.cs: Hack to
	  copy mdb files into the xap so that sdb works.

	* MonoDevelop.Moonlight/MoonlightProject.cs: Create a debug
	  console except if we're using the "run" mode.

2009-11-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightProject.cs: Fix creation of
	  Moonlight project configurations.

2009-10-30  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MonoDevelop.Moonlight.csproj:
	* MonoDevelop.Moonlight.addin.xml:
	* MonoDevelop.Moonlight/MoonlightProject.cs:
	* MonoDevelop.Moonlight/MoonlightExecutionCommand.cs:
	* MonoDevelop.Moonlight/MoonlightExecutionHandler.cs:
	* MonoDevelop.Moonlight/MoonlightProjectConfiguration.cs: Use
	  an execution handler so that the debugger command doesn't
	  get enabled.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Moonlight.addin.xml: Bump MD version.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* MonoDevelop.Moonlight.csproj:
	* gtk-gui/MonoDevelop.Moonlight.Gui.MoonlightOptionsPanelWidget.cs:
	  Flush.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Moonlight.csproj: Import md.targets .

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Moonlight.addin.xml: Bump MD version.

2009-10-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Moonlight/MoonlightEditorExtension.cs: Tweak API
	  so classes can return completion lists instead of modifying
	  one they're given.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic: Update gtk# dependency.

2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Moonlight.csproj: Updated dependencies. We now
	  depend on gtk# 2.12.8, Mono 2.4, and Mono.Addins 0.4.

2009-08-12  Michael Hutchinson  <mhutchinson@novell.com>
